--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,46 +1,31 @@
-name: CI/CD Pipeline
+name: Deploy to EC2
 
 on:
   push:
     branches:
-      - main  # or the branch you want to trigger the workflow
+      - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Set up SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.DEV_EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}  # or DOCKER_HUB_ACCESS_TOKEN if using a token
+    - name: Add SSH Key to Known Hosts
+      run: ssh-keyscan -H ec2-54-190-228-137.us-west-2.compute.amazonaws.com >> ~/.ssh/known_hosts
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/aspdotnetapp:latest .
-
-      - name: Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/aspdotnetapp:latest
-
-      - name: Deploy to AWS EC2
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.DEV_EC2_SSH_PRIVATE_KEY }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-        run: |
-          echo "$SSH_PRIVATE_KEY" > key.pem
-          chmod 600 key.pem
-          ssh -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/aspdotnetapp:latest
-            docker stop aspdotnetapp || true
-            docker rm aspdotnetapp || true
-            docker run -d --name aspdotnetapp -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/aspdotnetapp:latest
-          EOF
+    - name: Deploy to EC2
+      run: |
+        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-54-190-228-137.us-west-2.compute.amazonaws.com << 'EOF'
+          docker ps
+          # Add additional deployment commands below
+          # e.g., docker-compose up -d
+        EOF
