--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -19,13 +19,17 @@ jobs:
         echo "${{ secrets.DEV_EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
 
-    - name: Add SSH Key to Known Hosts
+    - name: Add EC2 Host to Known Hosts
       run: ssh-keyscan -H ec2-54-190-228-137.us-west-2.compute.amazonaws.com >> ~/.ssh/known_hosts
+
+    - name: Test SSH Connection
+      run: |
+        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-54-190-228-137.us-west-2.compute.amazonaws.com "echo 'SSH connection successful!'"
 
     - name: Deploy to EC2
       run: |
         ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-54-190-228-137.us-west-2.compute.amazonaws.com << 'EOF'
+          # Your deployment commands here
           docker ps
-          # Add additional deployment commands below
-          # e.g., docker-compose up -d
+          # Example: docker-compose up -d
         EOF
