--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -3,33 +3,29 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main
+      - main  # Change to your branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up SSH key
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.DEV_EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEV_EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
-    - name: Add EC2 Host to Known Hosts
-      run: ssh-keyscan -H ec2-54-190-228-137.us-west-2.compute.amazonaws.com >> ~/.ssh/known_hosts
+      - name: Add EC2 Host to Known Hosts
+        run: ssh-keyscan -H ec2-54-190-228-137.us-west-2.compute.amazonaws.com >> ~/.ssh/known_hosts
 
-    - name: Test SSH Connection
-      run: |
-        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-54-190-228-137.us-west-2.compute.amazonaws.com "echo 'SSH connection successful!'"
-
-    - name: Deploy to EC2
-      run: |
-        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-54-190-228-137.us-west-2.compute.amazonaws.com << 'EOF'
-          # Your deployment commands here
-          docker ps
-          # Example: docker-compose up -d
-        EOF
+      - name: Deploy to EC2
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@ec2-54-190-228-137.us-west-2.compute.amazonaws.com << 'EOF'
+            # Run your commands here
+            docker ps
+            # Example deployment commands
+          EOF
