--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -24,11 +24,20 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/my-app:latest .
+        IMAGE_TAG="aspdotnetapp:${{ github.sha }}"
+        docker build -t $IMAGE_TAG .
+        echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
 
     - name: Push Docker image to Docker Hub
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+        docker push ${{ env.IMAGE_TAG }}
+
+    - name: Setup SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.DEV_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.DEV_EC2_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy to AWS EC2
       env:
@@ -38,8 +47,9 @@ jobs:
         DEV_EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
       run: |
         ssh -o StrictHostKeyChecking=no ubuntu@$DEV_EC2_HOST << 'EOF'
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          IMAGE_TAG="aspdotnetapp:${{ github.sha }}"
+          sudo docker pull $IMAGE_TAG
           sudo docker stop my-app || true
           sudo docker rm my-app || true
-          sudo docker run -d --name my-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          sudo docker run -d --name my-app -p 80:80 $IMAGE_TAG
         EOF
