--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-and-deploy-dev:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -51,29 +52,10 @@ jobs:
   manual-approval-and-deploy-prod:
     runs-on: ubuntu-latest
     needs: build-and-deploy-dev
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.approve == 'true'
 
     steps:
-    - name: Manual approval
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { payload } = github.context;
-          const userResponse = await github.actions.createWorkflowDispatch({
-            owner: payload.repository.owner.login,
-            repo: payload.repository.name,
-            workflow_id: 'build-and-deploy-prod.yml',
-            ref: payload.ref,
-            inputs: {
-              approve: true
-            }
-          });
-
-          console.log(userResponse);
-
     - name: Setup SSH for PROD
-      if: inputs.approve == 'true'
       run: |
         mkdir -p ~/.ssh
         echo "${{ secrets.PROD_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
@@ -81,7 +63,6 @@ jobs:
         ssh-keyscan -H ${{ secrets.PROD_EC2_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy to AWS EC2 PROD
-      if: inputs.approve == 'true'
       env:
         PROD_EC2_HOST: ${{ secrets.PROD_EC2_HOST }}
       run: |
