--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -58,22 +58,22 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          const { Octokit } = require("@octokit/rest");
-          const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
           const issue_number = context.payload.pull_request ? context.payload.pull_request.number : context.issue.number;
           const owner = context.repo.owner;
           const repo = context.repo.repo;
 
-          const comment = await octokit.issues.createComment({
+          // Create a comment requesting approval
+          await github.issues.createComment({
             owner,
             repo,
             issue_number,
             body: "Please approve this deployment by adding the `approved` label."
           });
 
+          // Check for approval label every 30 seconds
           while (true) {
             await new Promise(resolve => setTimeout(resolve, 30000));
-            const { data: issue } = await octokit.issues.get({
+            const { data: issue } = await github.issues.get({
               owner,
               repo,
               issue_number
